# swc-plugins

./: .eslintrc.js  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  binding.js  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  rust-toolchain
crates/binding/: Cargo.toml  tex.rs
crates/binding/src/: exit.rs  lib.rs  minify.rs  thread_safe_function.rs  transform.rs  tsfn.rs
crates/binding/src/binding_types/: config.rs  extensions.rs  mod.rs  plugin_config_routes.rs  plugin_dynamic_import_node.rs  plugin_emotion.rs  plugin_import.rs  plugin_lock_corejs_version.rs  plugin_lodash.rs  plugin_modularize_imports.rs  plugin_react_const_elements.rs  plugin_react_utils.rs  plugin_ssr_loader_id.rs  plugin_styled_components.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  minify.rs  pass.rs  plugin.rs  transform.rs  types.rs
crates/core/tests/: main.rs
crates/core/tests/snapshots/: main__plugin-import.snap  main__plugin-import.snap.new
crates/integration_tests/: Cargo.toml
crates/integration_tests/src/: lib.rs
crates/integration_tests/tests/plugin_import/: main.rs
crates/integration_tests/tests/plugin_lock_corejs_version/: main.rs
crates/integration_tests/tests/plugin_lodash/: main.rs
crates/integration_tests/tests/plugin_react_const_elements/: main.rs
crates/integration_tests/tests/plugin_react_utils/: main.rs
crates/integration_tests/tests/plugin_ssr_loader_id/: main.rs
crates/integration_tests/tests/plugin_ssr_loader_id/useCreateContainer/: expected.js
crates/integration_tests/tests/plugin_ssr_loader_id/useLoader/: actual.js  expected.js  option.js
crates/integration_tests/tests/plugin_ssr_loader_id/useMemo/: expected.js
crates/integration_tests/tests/plugin_ssr_loader_id/useStaticLoader/: actual.js  expected.js
crates/plugin_dynamic-import-node/: Cargo.toml
crates/plugin_dynamic-import-node/src/: lib.rs
crates/plugin_dynamic-import-node/tests/: main.rs
crates/plugin_dynamic-import-node/tests/fixtures/basic-import/: actual.js  expected.es2015.js  expected.js  expected.noInterop.js
crates/plugin_dynamic-import-node/tests/fixtures/chained-import/: actual.js  expected.es2015.js  expected.js  expected.noInterop.js
crates/plugin_dynamic-import-node/tests/fixtures/dynamic-argument/: expected.es2015.js  expected.js
crates/plugin_dynamic-import-node/tests/fixtures/import-with-comment/: actual.js  expected.es2015.js  expected.js  expected.noInterop.js
crates/plugin_dynamic-import-node/tests/fixtures/nested-import/: actual.js  expected.es2015.js  expected.js  expected.noInterop.js
crates/plugin_dynamic-import-node/tests/fixtures/non-string-argument/: actual.js  expected.es2015.js  expected.js  expected.noInterop.js
crates/plugin_dynamic-import-node/tests/fixtures/template-argument/: expected.es2015.js  expected.js
crates/plugin_import/: Cargo.toml  index.d.ts
crates/plugin_import/src/: lib.rs  visit.rs
crates/plugin_import/tests/: fixture.rs  main.rs
crates/plugin_import/tests/fixtures/basic/: input.jsx  output.js
crates/plugin_import/tests/fixtures/dash/: input.jsx  output.js
crates/plugin_import/tests/fixtures/lower/: input.jsx  output.js
crates/plugin_loadable_components/: Cargo.toml
crates/plugin_loadable_components/src/: lib.rs  util.rs
crates/plugin_lock_corejs_version/: Cargo.toml
crates/plugin_lock_corejs_version/src/: lib.rs
crates/plugin_lock_corejs_version/tests/: main.rs
crates/plugin_lodash/: Cargo.toml  package.json  pnpm-lock.yaml  readme.md
crates/plugin_lodash/src/: error.rs  lib.rs  mappings.rs
crates/plugin_lodash/tests/: main.rs
crates/plugin_modernjs_ssr_loader_id/: Cargo.toml
crates/plugin_modernjs_ssr_loader_id/src/: lib.rs
crates/plugin_modernjs_ssr_loader_id/wasm/: Cargo.toml  modernjs_ssr_loader_id_transform.wasm  package.json
crates/plugin_modernjs_ssr_loader_id/wasm/src/: lib.rs
crates/plugin_modularize_imports/: Cargo.toml  index.d.ts
crates/plugin_modularize_imports/src/: lib.rs
crates/plugin_modularize_imports/tests/: fixture.rs
crates/plugin_react_const_elements/: Cargo.toml  README.md
crates/plugin_react_const_elements/src/: const_decls.rs  immutable.rs  lib.rs  utils.rs
crates/plugin_react_const_elements/tests/: main.rs
crates/plugin_react_const_elements/tests/deopt/dont-hoist-before-class/: output.mjs
crates/plugin_react_const_elements/tests/deopt/inline-elements/: input.js  output.js
crates/plugin_react_const_elements/tests/deopt/issue-7610/: input.mjs
crates/plugin_react_const_elements/tests/deopt/jsx-in-prop-2/: output.js
crates/plugin_react_const_elements/tests/deopt/member-expression/: output.js
crates/plugin_react_const_elements/tests/deopt/member-expression-constant/: input.js
crates/plugin_react_const_elements/tests/deopt/namespace/: output.js
crates/plugin_react_utils/: Cargo.toml  index.d.ts
crates/plugin_react_utils/src/: import_react.rs  lib.rs  remove_effect.rs  remove_prop_types.rs
crates/plugin_react_utils/tests/: main.rs
crates/plugin_remove_es_module_mark/: Cargo.toml
crates/plugin_remove_es_module_mark/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  utils.rs
crates/swc_plugins_collection/: Cargo.toml
crates/swc_plugins_collection/src/: lib.rs  pass.rs  types.rs
crates/swc_plugins_collection/tests/: main.rs
crates/swc_plugins_collection/tests/snapshots/: main__plugin-import.snap
crates/swc_plugins_core/: Cargo.toml
crates/swc_plugins_core/benches/: main.rs  wasm.rs
crates/swc_plugins_core/src/: lib.rs  minify.rs  pass.rs  transform.rs  types.rs
crates/swc_plugins_core/tests/: main.rs
crates/swc_plugins_core/tests/snapshots/: main__plugin-import.snap
crates/swc_plugins_testing/: Cargo.toml
crates/swc_plugins_testing/src/: fixture.rs  lib.rs  plugin_testing.rs  utils.rs
crates/test_plugins/: Cargo.toml
crates/test_plugins/src/: fixture.rs  lib.rs  plugin_testing.rs  utils.rs
crates/test_wasm_plugin/: Cargo.toml
crates/test_wasm_plugin/src/: lib.rs
(+474 files in other folders)
