cargo-features = ["strip"]

[workspace]
exclude = ["crates/plugin_modernjs_ssr_loader_id/wasm"]
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
description = "SWC plugins for Modern.js Builder & Rspack."
license = "MIT"
repository = "https://github.com/modern-js-dev/swc-plugins"
readme = "readme.md"

[profile.release]
lto = false

[workspace.dependencies]
rustc-hash = { version = "1.1.0" }
anyhow = { version = "1.0.62" }
dashmap = { version = "5.4.0" }
serde = "1.0.152"
serde_json = "1.0.91"
swc_core = { version = "0.59.6", features = ["common"] }
