cargo-features = ["strip"]

[workspace]
exclude = ["crates/plugin_modernjs_ssr_loader_id/wasm"]
members = ["crates/*"]

[profile.release]
lto = false

[workspace.dependencies]
rustc-hash = { version = "1.1.0" }
anyhow = { version = "1.0.69" }
dashmap = { version = "5.4.0" }
serde = "1.0.152"
serde_json = "1.0.91"
swc_core = { version = "0.74.6", features = ["common"] }
