[package]
edition = "2021"
name = "modern_swc_binding"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
dev = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modern_swc_core = {path = "../core"}
crossbeam-channel = "0.5.6"
napi = {version = "2.9.1", default-features = false, features = [
  "napi7",
]}
napi-derive = "2.9.1"
shared = {path = "../shared"}
