[package]
edition = "2021"
name = "modern_swc_binding"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
dev = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"                                                  # used by threadsafe function
napi = { version = "2.9.1", default-features = false, features = ["napi7"] }
napi-derive = "2.9.1"
swc_core = { workspace = true, features = ["base", "common"] }
modern_swc_plugins_core = { path = "../swc_plugins_core" }
modern_swc_plugins_collection = { path = "../swc_plugins_collection" }
serde_json = { workspace = true }
serde = { workspace = true }
