[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
plugin_modularize_imports = {path = "../plugin_modularize_imports"}
plugin_import = {path = "../plugin_import"}
plugin_react_utils = {path = "../plugin_react_utils"}

[dev-dependencies]
insta = "1.18.2"
