[package]
edition = "2021"
name = "integration_tests"
version = "0.1.0"

[dependencies]
colored = "2.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
similar = "2.1.0"
swc_core = { workspace = true, features = [
  "common",
  "ecma_ast",
  "ecma_visit",
  "ecma_transforms",
  "testing_transform",
] }
swc_plugins_core = { path = "../swc_plugins_core" }
swc_plugins_collection = { path = "../swc_plugins_collection" }
swc_plugins_utils = { path = "../swc_plugins_utils" }
