[package]
edition = "2021"
name = "plugin_dynamic_import_node"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = {path = "../shared"}
serde = "1.0.145"

[dev-dependencies]
test_plugins = {path = "../test_plugins"}
serde_json = "1.0.86"