[package]
edition = "2021"
name = "plugin_import"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.3"
heck = "0.4.0"
regex = "1.6.0"
serde = "1.0.144"
shared = {path = "../shared"}

[dev-dependencies]
test_plugins = {path = "../test_plugins"}
