[package]
edition = "2021"
name = "plugin_import"
version = "0.1.0"

[dependencies]
handlebars = "4.3.3"
heck = "0.4.0"
regex = "1.6.0"
serde = "1"
shared = {path = "../shared", features = [
  "ahash",
]}
swc_core = {version = "0.51.1", features = [
  "common",
  "ecma_ast",
  "ecma_visit",
]}

[dev-dependencies]
test_plugins = {path = "../test_plugins"}
