[package]
edition = "2021"
name = "swc_plugin_import"
version = "0.1.8"
license = "MIT"
description = "babel-plugin-import rewritten in Rust"

[dependencies]
handlebars = "4.3.3"
regex = "1.6.0"
serde = { workspace = true }
rustc-hash = { workspace = true }
swc_core = { workspace = true, features = ["common", "ecma_ast", "ecma_visit"] }

[dev-dependencies]
test_plugins = { path = "../test_plugins" }
