[package]
edition = "2021"
name = "plugin_lock_corejs_version"
version = "0.1.0"

[dependencies]
shared = {path = "../shared", features = ["serde"]}
swc_core = {version = "0.51.1", features = [
  "common",
  "ecma_visit",
  "ecma_ast",
]}

[dev-dependencies]
test_plugins = {path = "../test_plugins"}
