[package]
edition = "2021"
name = "plugin_lock_corejs_version"
version = "0.1.0"

[dependencies]
serde = { workspace = true }
swc_core = { workspace = true, features = ["common", "ecma_visit", "ecma_ast"] }

[dev-dependencies]
test_plugins = { path = "../test_plugins" }
serde_json = { workspace = true }
