[package]
name = "plugin_lodash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better_scoped_tls = "0.1.0"
nodejs-resolver = "0.0.42"
shared = {path="../shared"}

[dev-dependencies]
test_plugins = {path="../test_plugins"}
