[package]
edition = "2021"
name = "plugin_lodash"
version = "0.1.0"

[dependencies]
nodejs-resolver = "0.0.60"
shared = {path = "../shared", features = [
  "ahash",
  "dashmap",
  "serde",
  "plugin_context",
]}
swc_core = {version = "0.59.12", features = [
  "common",
  "ecma_ast",
  "ecma_visit",
  "ecma_quote",
  "ecma_utils",
]}

[lib]
crate-type = ["cdylib", "rlib"]

[dev_dependencies]
test_plugins = {path = "../test_plugins"}
