[package]
edition = "2021"
name = "swc_plugin_lodash"
version = "0.1.0"

[dependencies]
nodejs-resolver = "0.0.86"
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
swc_core = { workspace = true, features = [
  "common",
  "ecma_ast",
  "ecma_visit",
  "ecma_quote",
  "ecma_utils",
] }
swc_plugins_utils = { path = "../swc_plugins_utils" }

[lib]
crate-type = ["cdylib", "rlib"]
