[package]
edition = "2021"
name = "plugin_modernjs_ssr_loader_id"
version = "0.1.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
md5 = "0.7.0"
swc_plugins_utils = { path = "../swc_plugins_utils" }
swc_core = { workspace = true, features = [
  "common",
  "ecma_ast",
  "ecma_visit",
  "ecma_quote",
] }

[dev_dependencies]
test_plugins = { path = "../test_plugins" }
