[package]
description = "AST Transforms for import modularizer"
edition = "2018"
license = "Apache-2.0"
name = "plugin_modularize_imports"
repository = "https://github.com/vercel/next.js.git"
version = "0.11.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.2.1"
once_cell = "1.13.0"
regex = "1.5"
serde = "1"
shared = {path = "../shared"}
heck = "0.4.0"
