[package]
name = "plugin_react_const_elements"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_core = { workspace = true, features = [
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "common",
] }
rustc-hash = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
swc_core = { workspace = true, features = [
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "ecma_parser",
  "common",
] }
test_plugins = { path = "../test_plugins" }
swc_plugins_collection = { path = "../swc_plugins_collection" }
