[package]
edition = "2021"
name = "plugin_react_utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = {path = "../shared"}
swc_core = {version = "0.59.12", features = [
  "cached",
  "common",
  "ecma_ast",
  "ecma_visit",
  "ecma_quote",
]}
swc_plugins_utils = {path = "../swc_plugins_utils"}
[dev-dependencies]
glob = "0.3.0"
test_plugins = {path = "../test_plugins"}
