[package]
edition = "2021"
name = "swc_plugin_react_utils"
version = "0.1.0"

[dependencies]
swc_core = { workspace = true, features = [
  "cached",
  "common",
  "ecma_ast",
  "ecma_visit",
  "ecma_quote",
] }
modern_swc_plugins_utils = { path = "../swc_plugins_utils" }
serde = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
glob = "0.3.0"
serde_json = { workspace = true }
modern_swc_plugins_testing = { path = "../swc_plugins_testing" }
