[package]
edition = "2021"
name = "swc_plugin_react_utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_core = { workspace = true, features = [
  "cached",
  "common",
  "ecma_ast",
  "ecma_visit",
  "ecma_quote",
] }
swc_plugins_utils = { path = "../swc_plugins_utils" }
serde = { workspace = true }
rustc-hash = { workspace = true }
