[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
serde_json = "1.0.71"
serde = {version= "1.0.71", features=["derive"]}
swc_ecma_transforms_testing = "0.114.2"
testing = "0.31.5"
swc_core = { features = [
  "common_concurrent",
  "ecma_ast",
  "ecma_visit",
  "ecma_loader_node",
  "ecma_loader_lru",
  "ecma_utils",
  "ecma_minifier",
  "ecma_transforms",
  "__ecma_transforms",
  "ecma_transforms_react",
  "ecma_transforms_typescript",
  "ecma_transforms_optimization",
  "ecma_quote",
  "ecma_parser",
  "ecma_parser_typescript",
  "cached",
  "base",
], version = "0.38.5" }
hashbrown = "0.12.3"

[dev-dependencies]
testing_macros = "0.2.7"