[package]
edition = "2021"
name = "shared"
version = "0.1.0"

[features]
ahash = ["dep:ahash"]
anyhow = ["dep:anyhow"]
dashmap = ["dep:dashmap"]
plugin_context = ["dep:swc_core"]
serde = ["dep:serde"]
serde_json = ["dep:serde_json"]

[dependencies]
ahash = {version = "0.8.2", optional = true, features = ["serde"]}
anyhow = {version = "1.0.62", optional = true}
dashmap = {version = "5.4.0", optional = true}
serde = {version = "1", features = ["derive"], optional = true}
serde_json = {version = "1.0.71", optional = true}
swc_core = {version = "0.59.12", optional = true, features = [
  "common",
]}

[dev-dependencies]
testing_macros = "0.2.7"
