[package]
name = "swc_plugins_collection"
version = "0.1.0"
edition = "2021"


[dependencies]

serde_json = { workspace = true }
serde = { workspace = true }
swc_core = { workspace = true, features = [
    "base",
    "common",
    "ecma_ast",
    "ecma_visit",
    "ecma_transforms",
    "ecma_parser",
    "common_plugin_transform",
] }
swc_plugins_utils = { path = "../swc_plugins_utils" }
swc_plugins_core = { path = "../swc_plugins_core" }

# plugins list 
modularize_imports = "0.32.0"
swc_plugin_import = { path = "../plugin_import" }
plugin_lock_corejs_version = { path = "../plugin_lock_corejs_version" }
swc_plugin_lodash = { path = "../plugin_lodash" }
swc_plugin_react_utils = { path = "../plugin_react_utils" }
plugin_remove_es_module_mark = { path = "../plugin_remove_es_module_mark" }
plugin_ssr_loader_id = { path = "../plugin_ssr_loader_id" }
plugin_config_routes = { path = "../plugin_config_routes"  }
styled_components = "0.59.0"
styled_jsx = "0.36.0"
swc_emotion = "0.35.0"
swc_plugin_loadable_components = { git = "https://github.com/swc-project/plugins", rev = "a6e943c" }

[dev-dependencies]
insta = "1.18.2"
