[package]
edition = "2021"
name = "swc_plugins_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
swc_core = { workspace = true, features = [
  "base",
  "common",
  "ecma_ast",
  "ecma_visit",
  "ecma_transforms",
  "ecma_parser",
] }
swc_plugins_utils = { path = "../swc_plugins_utils" }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
insta = "1.18.2"
