[package]
edition = "2021"
name = "swc_plugins_core"
version = "0.1.0"
resolver = "2"

[features]
plugin = [
  "swc_core/plugin_transform_host_native",
  "swc_core/plugin_transform_host_native_filesystem_cache",
]

[dependencies]
anyhow = { workspace = true }
swc_core = { workspace = true, features = [
  "base",
  "common",
  "css_ast",
  "css_codegen",
  "css_minifier",
  "css_parser",
  "ecma_ast",
  "ecma_visit",
  "ecma_transforms",
  "ecma_parser",
] }
swc_plugins_utils = { path = "../swc_plugins_utils" }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
insta = "1.18.2"
cargo_metadata = "0.15.4"
swc_plugins_collection = { path = "../swc_plugins_collection" }
