[package]
edition = "2021"
name = "swc_plugins_core"
version = "0.1.0"

[features]
plugin = [
  "swc_core/plugin_transform_host_native_filesystem_cache",
  "swc_core/plugin_transform_host_native",
]

[dependencies]
anyhow = { workspace = true }
swc_core = { workspace = true, features = [
  "base",
  "common_concurrent",
  "css_ast",
  "css_codegen",
  "css_minifier",
  "css_parser",
  "ecma_ast",
  "ecma_visit",
  "ecma_transforms",
  "ecma_parser",
  "ecma_minifier_concurrent",
] }
swc_plugins_utils = { path = "../swc_plugins_utils" }
serde_json = { workspace = true }
serde = { workspace = true }
regex = "1.6.0"

[dev-dependencies]
insta = "1.18.2"
