[package]
edition = "2021"
name = "modern_swc_plugins_testing"
version = "0.1.0"


[dependencies]
colored = "2.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
similar = "2.1.0"
swc_core = { workspace = true, features = [
  "common",
  "ecma_ast",
  "ecma_visit",
  "ecma_transforms",
  "testing_transform",
] }
modern_swc_plugins_core = { path = "../swc_plugins_core" }
modern_swc_plugins_collection = { path = "../swc_plugins_collection" }
