[package]
edition = "2021"
name = "plugin"
version = "0.1.8"
license = "MIT"
description = "babel-plugin-import rewritten in Rust"

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
handlebars = "4.3.3"
regex = "1.6.0"
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
getrandom = { version = "*", features = ["js"] }
swc_core = { workspace = true, default-features = false, features = [
  "common",
  "ecma_ast",
  "ecma_visit",
  "ecma_plugin_transform",
] }
swc_plugin_import = { path = "../plugin_import" }
